Fixes for correctness

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="banner-overlay"></div>
             <div class="banner-content">
                 <h1 class="banner-title">Anand Ramakrishnan</h1>
-                <p class="banner-subtitle">Lead Computer Vision Scientist at Norfolk Southern Railway</p>
+                <p class="banner-subtitle">Lead Computer Vision Scientist at Norfolk Southern</p>
                 <div class="banner-buttons">
                     <a href="#contact" class="btn">Contact Me</a>
                     <a href="#publications" class="btn btn-outline">View Publications</a>
@@ -67,15 +67,11 @@
                         </div>
                         <div class="detail-item fade-in">
                             <i class="fas fa-envelope"></i>
-                            <span>anand.r@example.com</span>
-                        </div>
-                        <div class="detail-item fade-in">
-                            <i class="fas fa-phone"></i>
-                            <span>(123) 456-7890</span>
+                            <span>anand.ramakrishnan2@nscorp.com</span>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="scale-in"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/anand-ramakrishnan-700524105" class="scale-in"><i class="fab fa-linkedin"></i></a>
                         <a href="https://scholar.google.com/citations?user=RP0uzVkAAAAJ&hl=en&oi=ao" target="_blank" class="scale-in"><i class="fas fa-graduation-cap"></i></a>
                     </div>
                 </div>
@@ -93,21 +89,35 @@
                     <div class="timeline-content">
                         <h3>Lead Computer Vision Scientist</h3>
                         <h4>Norfolk Southern | November 2024 - Present</h4>
-                        <p>Leading the development of computer vision models to prevent potential train derailments, reducing reported incidents by 15%. Implementing MLOps tools to streamline model deployment and monitoring, resulting in a 30% reduction in time-to-production.</p>
+                        <p>Lead Scientist tasked with developing CV models preventing potential train derailments, reducing reported incidents by 15%. Helping with transition of local on-prem system to AWS environment. Built MLOps tools for real-time model performance tracking.</p>
                     </div>
                 </div>
                 <div class="timeline-item" data-animation="slide-in-right">
                     <div class="timeline-content">
-                        <h3>Senior Computer Vision Engineer</h3>
-                        <h4>Open System Inc | June 2023 - October 2024</h4>
-                        <p>Developed and deployed computer vision models for autonomous vehicles, achieving a 25% improvement in object detection accuracy. Collaborated with cross-functional teams to integrate vision systems with sensor fusion algorithms.</p>
+                        <h3>Computer Vision Scientist Level II</h3>
+                        <h4>Open System Inc | October 2021 - November 2024</h4>
+                        <p>Designed and deployed multiple AI-driven computer vision models for predictive maintenance and train tracking. Researched self-supervised learning strategies to enhance object detection accuracy and robustness in railway applications.</p>
                     </div>
                 </div>
                 <div class="timeline-item" data-animation="slide-in-left">
                     <div class="timeline-content">
                         <h3>Research Assistant</h3>
-                        <h4>Worcester Polytechnic Institute | August 2018 - May 2023</h4>
-                        <p>Conducted research on deep learning-based computer vision techniques for medical image analysis. Published 5 papers in top-tier conferences and journals. Mentored undergraduate students on research projects.</p>
+                        <h4>Deep Learning Lab, WPI | May 2017 - August 2021</h4>
+                        <p>Developed an action recognition network for assessing teacher-student interactions, leading to multiple publications and a patent. Fused multimodal information using temporal convolution networks for video analysis.</p>
+                    </div>
+                </div>
+                <div class="timeline-item" data-animation="slide-in-right">
+                    <div class="timeline-content">
+                        <h3>Deep Learning Research Intern</h3>
+                        <h4>PARC, a Xerox Company | May 2019 - August 2019</h4>
+                        <p>Built hybrid models combining physics and machine learning using LSTMs and RNNs. Developed an AI-driven system identification model that improved microchip assembly performance by a factor of 5.</p>
+                    </div>
+                </div>
+                <div class="timeline-item" data-animation="slide-in-left">
+                    <div class="timeline-content">
+                        <h3>Deep Learning Intern</h3>
+                        <h4>Bosch Center for Artificial Intelligence | May 2018 - August 2018</h4>
+                        <p>Implemented facial keypoint detection model to track drowsiness of car drivers. Used stacked hourglass architecture on CelebA and AFLW datasets.</p>
                     </div>
                 </div>
             </div>
@@ -122,22 +132,22 @@
             <div class="timeline">
                 <div class="timeline-item" data-animation="slide-in-left">
                     <div class="timeline-content">
-                        <h3>Ph.D. in Computer Science</h3>
-                        <h4>Worcester Polytechnic Institute | 2018 - 2023</h4>
-                        <p>Focused on computer vision and deep learning. Dissertation: "Advanced Deep Learning Techniques for Medical Image Analysis." GPA: 3.85/4.0</p>
+                        <h3>Ph.D. Candidate in Computer Science</h3>
+                        <h4>Worcester Polytechnic Institute | May 2017 - August 2021</h4>
+                        <p>Focused on computer vision and deep learning. Dissertation on multimodal machine learning for affective computing and classroom observation. GPA: 3.85/4.0</p>
                     </div>
                 </div>
                 <div class="timeline-item" data-animation="slide-in-right">
                     <div class="timeline-content">
                         <h3>M.S. in Robotics Engineering</h3>
-                        <h4>Worcester Polytechnic Institute | 2016 - 2018</h4>
-                        <p>Specialized in computer vision for robotics applications. Thesis: "Vision-Based Navigation for Autonomous Robots." GPA: 4.0/4.0</p>
+                        <h4>Worcester Polytechnic Institute | Aug 2015 - May 2017</h4>
+                        <p>Specialized in computer vision for robotics applications. Developed soft-bodied tactile sensors for robotic applications. GPA: 4.0/4.0</p>
                     </div>
                 </div>
                 <div class="timeline-item" data-animation="slide-in-left">
                     <div class="timeline-content">
                         <h3>B.Tech in Mechanical Engineering</h3>
-                        <h4>SRM University | 2012 - 2016</h4>
+                        <h4>SRM University, Chennai India | Aug 2011 - May 2015</h4>
                         <p>Focused on robotics and automation. Senior Project: "Automated Visual Inspection System for Manufacturing." GPA: 4.0/4.0</p>
                     </div>
                 </div>
@@ -155,10 +165,8 @@
                     <h3>Languages</h3>
                     <ul class="skill-list">
                         <li>Python</li>
+                        <li>C</li>
                         <li>C++</li>
-                        <li>MATLAB</li>
-                        <li>SQL</li>
-                        <li>JavaScript</li>
                     </ul>
                 </div>
                 <div class="skill-category" data-animation="scale-in">
@@ -167,28 +175,27 @@
                         <li>PyTorch</li>
                         <li>TensorFlow</li>
                         <li>Keras</li>
-                        <li>OpenCV</li>
-                        <li>scikit-learn</li>
+                        <li>Jupyter</li>
                     </ul>
                 </div>
                 <div class="skill-category" data-animation="scale-in">
                     <h3>Tools</h3>
                     <ul class="skill-list">
-                        <li>AWS</li>
+                        <li>AWS (Sagemaker, Lambda, S3, EC2)</li>
+                        <li>MLOps</li>
+                        <li>OCR</li>
                         <li>Docker</li>
                         <li>Git</li>
-                        <li>MLflow</li>
-                        <li>Kubernetes</li>
                     </ul>
                 </div>
                 <div class="skill-category" data-animation="scale-in">
                     <h3>Specialties</h3>
                     <ul class="skill-list">
-                        <li>Object Detection</li>
                         <li>Segmentation</li>
-                        <li>Tracking</li>
+                        <li>Object Recognition and Localization</li>
+                        <li>Active Learning</li>
+                        <li>Time Series Modeling</li>
                         <li>RAG</li>
-                        <li>Generative AI</li>
                     </ul>
                 </div>
             </div>
@@ -206,12 +213,12 @@
                         <img src="https://images.unsplash.com/photo-1474487548417-781cb71495f3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2340&q=80" alt="Publication 1">
                     </div>
                     <div class="project-content">
-                        <h3>Deep Learning for Railway Track Defect Detection</h3>
-                        <p>A novel approach to detecting railway track defects using deep learning models, achieving 95% accuracy in real-world conditions.</p>
+                        <h3>Machine-learning framework for detecting defects or conditions of railcar systems</h3>
+                        <p>US Patent App. Pending - An innovative machine learning framework designed to detect defects and conditions in railcar systems, improving safety and maintenance efficiency.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Computer Vision</span>
-                            <span class="project-tag">Deep Learning</span>
+                            <span class="project-tag">Patent</span>
                             <span class="project-tag">Railway Safety</span>
+                            <span class="project-tag">Machine Learning</span>
                         </div>
                         <a href="https://scholar.google.com/citations?user=RP0uzVkAAAAJ&hl=en&oi=ao" class="btn btn-outline" target="_blank">View on Google Scholar</a>
                     </div>
@@ -221,12 +228,12 @@
                         <img src="images/Norfolk1.jpg" alt="Publication 2">
                     </div>
                     <div class="project-content">
-                        <h3>Automated Visual Inspection for Railway Infrastructure</h3>
-                        <p>A comprehensive system for automated visual inspection of railway infrastructure, reducing manual inspection time by 70%.</p>
+                        <h3>System and Method for Hybrid-Model-Based Micro-Assembly Control</h3>
+                        <p>US Patent App. 18/462,332, 2024 - A novel system combining physics and machine learning models for precise control in micro-assembly processes.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Automation</span>
-                            <span class="project-tag">Infrastructure</span>
-                            <span class="project-tag">Inspection</span>
+                            <span class="project-tag">Patent</span>
+                            <span class="project-tag">Hybrid Models</span>
+                            <span class="project-tag">Micro-Assembly</span>
                         </div>
                         <a href="https://scholar.google.com/citations?user=RP0uzVkAAAAJ&hl=en&oi=ao" class="btn btn-outline" target="_blank">View on Google Scholar</a>
                     </div>
@@ -236,12 +243,12 @@
                         <img src="images/Norfolk2.jpg" alt="Publication 3">
                     </div>
                     <div class="project-content">
-                        <h3>Real-time Object Detection for Autonomous Vehicles</h3>
-                        <p>A real-time object detection system for autonomous vehicles, capable of processing 60 frames per second with high accuracy.</p>
+                        <h3>Toward Automated Classroom Observation</h3>
+                        <p>IEEE Transactions on Affective Computing 14 (1), 664-679, 2021 - Multimodal Machine Learning to Estimate CLASS Positive Climate and Negative Climate in educational settings.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Real-time</span>
-                            <span class="project-tag">Object Detection</span>
-                            <span class="project-tag">Autonomous Vehicles</span>
+                            <span class="project-tag">Affective Computing</span>
+                            <span class="project-tag">Multimodal ML</span>
+                            <span class="project-tag">Education</span>
                         </div>
                         <a href="https://scholar.google.com/citations?user=RP0uzVkAAAAJ&hl=en&oi=ao" class="btn btn-outline" target="_blank">View on Google Scholar</a>
                     </div>
@@ -266,16 +273,12 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <p>anand.r@example.com</p>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <p>(123) 456-7890</p>
+                            <p>anand.ramakrishnan2@nscorp.com</p>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="scale-in"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="scale-in"><i class="fas fa-graduation-cap"></i></a>
+                        <a href="https://www.linkedin.com/in/anand-ramakrishnan-700524105" class="scale-in"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://scholar.google.com/citations?hl=en&user=RP0uzVkAAAAJ&view_op=list_works&sortby=pubdate" class="scale-in"><i class="fas fa-graduation-cap"></i></a>
                     </div>
                 </div>
             </div>
