--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="detail-item fade-in">
                             <i class="fas fa-envelope"></i>
-                            <span>anand.ramakrishnan2@nscorp.com</span>
+                            <span>aramakrishnan2@wpi.edu</span>
                         </div>
                     </div>
                     <div class="social-links">
@@ -273,7 +273,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <p>anand.ramakrishnan2@nscorp.com</p>
+                            <p>aramakrishnan@wpi.edu</p>
                         </div>
                     </div>
                     <div class="social-links">
