--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="detail-item fade-in">
                             <i class="fas fa-envelope"></i>
-                            <span>aramakrishnan2@wpi.edu</span>
+                            <span>aramakrishnan@wpi.edu</span>
                         </div>
                     </div>
                     <div class="social-links">
